completed basics of pipeline

--- a/hugging_face_course/basics_of_pipeline.ipynb
+++ b/hugging_face_course/basics_of_pipeline.ipynb
@@ -3,11 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "94bde018",
+   "id": "ccf5a790",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-16T17:31:44.256804Z",
-     "start_time": "2022-07-16T17:31:41.937993Z"
+     "end_time": "2022-07-16T18:20:09.137133Z",
+     "start_time": "2022-07-16T18:19:56.765062Z"
     }
    },
    "outputs": [],
@@ -18,11 +18,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6ad9b5b4",
+   "id": "48baa513",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-16T17:32:36.683259Z",
-     "start_time": "2022-07-16T17:32:16.048566Z"
+     "end_time": "2022-07-16T18:20:29.120564Z",
+     "start_time": "2022-07-16T18:20:09.139126Z"
     }
    },
    "outputs": [
@@ -52,11 +52,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0f3a9a5d",
+   "id": "ee94159e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-16T17:32:48.190215Z",
-     "start_time": "2022-07-16T17:32:48.123296Z"
+     "end_time": "2022-07-16T18:20:29.182591Z",
+     "start_time": "2022-07-16T18:20:29.122559Z"
     }
    },
    "outputs": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c091cf60",
+   "id": "a47c8418",
    "metadata": {},
    "source": [
     "Three main steps involved when we pass some text to a pipeline:\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "982df122",
+   "id": "86c091fd",
    "metadata": {},
    "source": [
     "Some of the currently available pipelines are:\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc5dd40c",
+   "id": "3844bab7",
    "metadata": {},
    "source": [
     "##### zero-shot classification\n",
@@ -119,12 +119,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "909bcaa0",
+   "execution_count": null,
+   "id": "6e1b23d2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-16T17:50:47.844392Z",
-     "start_time": "2022-07-16T17:50:25.843521Z"
+     "start_time": "2022-07-16T18:19:56.771Z"
     }
    },
    "outputs": [
@@ -142,28 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "3c9865cd",
+   "execution_count": null,
+   "id": "ccff53fa",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-16T17:49:40.006706Z",
-     "start_time": "2022-07-16T17:49:39.367201Z"
+     "start_time": "2022-07-16T18:19:56.773Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'sequence': 'This is a course about the Transformers library',\n",
-       " 'labels': ['education', 'business', 'politics'],\n",
-       " 'scores': [0.8445992469787598, 0.11197393387556076, 0.04342679679393768]}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "classifier_1(\n",
     "    \"This is a course about the Transformers library\",\n",
@@ -173,28 +158,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "eb3ec817",
+   "execution_count": null,
+   "id": "359882a0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-16T17:49:47.341939Z",
-     "start_time": "2022-07-16T17:49:46.750836Z"
+     "start_time": "2022-07-16T18:19:56.775Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'sequence': 'The economy is may be on a downward trend worldwide',\n",
-       " 'labels': ['business', 'education', 'politics'],\n",
-       " 'scores': [0.9483700394630432, 0.028782233595848083, 0.02284778095781803]}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "classifier_1(\n",
     "    \"The economy is may be on a downward trend worldwide\",\n",
@@ -204,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98ea10e9",
+   "id": "5f77c3b2",
    "metadata": {},
    "source": [
     "##### text generation\n",
@@ -213,127 +184,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "346c8dfb",
+   "execution_count": null,
+   "id": "f12bfc6d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-16T17:54:31.305476Z",
-     "start_time": "2022-07-16T17:51:38.796087Z"
+     "start_time": "2022-07-16T18:19:56.783Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No model was supplied, defaulted to gpt2 (https://huggingface.co/gpt2)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e344e1b4bfe46ecaf23bdecd6bb5f15",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/665 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "57bb2e1497e24073b0606195bb2871ed",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/523M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2e986f120814600bd357b4dae4a8de3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/0.99M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f44eb5154364b69a0576d8bd8954896",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/446k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9e507cf7b864a6fba285117079b96dc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/1.29M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "generator = pipeline(\"text-generation\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "8bdc3905",
+   "execution_count": null,
+   "id": "6ea3e481",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-16T17:56:08.106425Z",
-     "start_time": "2022-07-16T17:56:05.752876Z"
+     "start_time": "2022-07-16T18:19:56.785Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'generated_text': 'In India you will find more and more of this kind of things in India. We know the answer to the question, how do we get rid of corruption in government?\"\\n\\nThe prime minister recently told a conference in Gujarat it would take a long'},\n",
-       " {'generated_text': 'In India you will find that if the user has to perform this command, the command will just print out the following:\\n\\n/bin/bash\\n\\nAnd you can see that now, no matter what, the new command is working. In'}]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# num_return_sequences will give number of sentences\n",
     "# max length is the length of each sentence\n",
@@ -342,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d6f7716",
+   "id": "06e04cf3",
    "metadata": {},
    "source": [
     "The previous examples used the default model for the task at hand, but we can use a particular model from Hub to use in a pipeline for a specific task. Let's try the distilgpt2 model!"
@@ -350,86 +222,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "fa86bfe6",
+   "execution_count": null,
+   "id": "0bb7265c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-16T18:01:39.743212Z",
-     "start_time": "2022-07-16T17:59:32.473398Z"
+     "start_time": "2022-07-16T18:19:56.789Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8ac7e5fd27c4435b57f35f4dbdc2905",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/762 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42884eb5ce6e4822a301b057583f08d3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/336M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3796e38031b41e6bb295915a8214c6c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/0.99M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5c1f49e0ea894c799802414c6f5b2c61",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/446k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a729730476734c2cb9025e8b0310535e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/1.29M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "generator_1 = pipeline(\"text-generation\",\n",
     "                       model = \"distilgpt2\")"
@@ -437,41 +237,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "c01d1c06",
+   "execution_count": null,
+   "id": "a8a564aa",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-16T18:01:49.210063Z",
-     "start_time": "2022-07-16T18:01:47.607232Z"
+     "start_time": "2022-07-16T18:19:56.791Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'generated_text': \"In India you will find many cases of sexual assaults in Delhi, even when the police are investigating them, in cases like the case in Delhi, the police have already tried to identify the culprits.\\n\\n\\n\\nThe government's role in identifying\"},\n",
-       " {'generated_text': 'In India you will find much to admire in the Indian media coverage of the latest events at the World Cup. The report mentions that the Indian Government will not be buying \"indo-Pakistani cricket equipment\".\\nThe report comes in response to the'}]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "generator_1(\"In India you will find\",num_return_sequences = 2, max_lenght=15)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "80099be9",
+   "id": "59eb744a",
    "metadata": {},
    "source": [
     "##### Mask filling\n",
@@ -480,135 +260,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "6f1f6b7f",
+   "execution_count": null,
+   "id": "65f501fe",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-16T18:06:24.671469Z",
-     "start_time": "2022-07-16T18:04:28.691933Z"
+     "start_time": "2022-07-16T18:19:56.794Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No model was supplied, defaulted to distilroberta-base (https://huggingface.co/distilroberta-base)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a9112e4bf0f428fb68bbcf95f3b15f9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/480 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f8f236b295b4d439ccb6fdb91dd5fd5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/316M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "846bf2170fa94bc993968eeeda2925bc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/878k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48d437729cb64b82b1ee7dbff595ea26",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/446k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69d46ffc4e3948aa92ba38012e6bb391",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/1.29M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "unmasker = pipeline(\"fill-mask\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "d8ca7905",
+   "execution_count": null,
+   "id": "ad71ff64",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-16T18:06:27.990614Z",
-     "start_time": "2022-07-16T18:06:27.910106Z"
+     "start_time": "2022-07-16T18:19:56.795Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'score': 0.5740700364112854,\n",
-       "  'token': 24347,\n",
-       "  'token_str': ' populous',\n",
-       "  'sequence': 'India is the most populous country'},\n",
-       " {'score': 0.052943311631679535,\n",
-       "  'token': 30002,\n",
-       "  'token_str': ' polluted',\n",
-       "  'sequence': 'India is the most polluted country'}]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# top_k argument controls how many possibilities want to be displayed\n",
     "unmasker(\"India is the most <mask> country\", top_k=2)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "674c9b83",
+   "metadata": {},
+   "source": [
+    "##### named entity recognition\n",
+    "NER is a task where the model has to find which parts of the input text correspond to entities such as persons, locations or organizations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22e89529",
+   "id": "b2abefe4",
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2022-07-16T18:19:56.798Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# we pass option grouped_entities=True in the pipeline creation function\n",
+    "# to tell the pipeline to regroup together the parts of sentence that\n",
+    "# correspond to same entity\n",
+    "ner = pipeline(\"ner\", grouped_entities=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5331fbc3",
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2022-07-16T18:19:56.800Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# here the model has correctly grouped Shneider Electric as a single \n",
+    "# organization, even though name consists of multiple words\n",
+    "ner(\"My name is AJ and I work at Schneider Electric in India.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14413856",
    "metadata": {},
    "outputs": [],
    "source": []
